# sync-docx-from-usb

./: .gitignore  Meagan.cabal  README.md  SyncDoc.cabal  default.nix  stack.yaml
app/: Main.hs
src/: Lib.hs
