cabal-version: 1.12

name:                SyncDoc
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/icemanx7/sync-docx-from-usb
license:             BSD3
license-file:        LICENSE
author:              icemanx7
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , filepath
                      , directory
  default-language:    Haskell2010

executable SyncDoc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath
                     , directory
                     , SyncDoc
  default-language:    Haskell2010

test-suite SyncDoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SyncDoc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/icemanx7/
